# claude-mcp-server

./: .env.example  .gitignore  README.md  main copy.py  main.py  pyproject.toml  stuff.txt
src/: logger.py  utils.py  validator.py  visualization.py
src/db/mongo/: analyzer.py  database.py
src/db/mysql/: analyzer.py  database.py
src/db/postgres/: analyzer.py  database.py
src/llm/: openai_client.py
